Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
         </ul>
       </header>
       <section>
-        <h3>
-<a id="training-the-next-generation-of-molecular-ecologists-using-experimental-evolution-and-next-generation-sequencing-to-teach-bench-and-bioinformatic-skills" class="anchor" href="#training-the-next-generation-of-molecular-ecologists-using-experimental-evolution-and-next-generation-sequencing-to-teach-bench-and-bioinformatic-skills" aria-hidden="true"><span class="octicon octicon-link"></span></a>Training the next generation of molecular ecologists: using experimental evolution and next-generation sequencing to teach bench and bioinformatic skills</h3>
+        <h1>
+<a id="using-experimental-evolution-and-next-generation-sequencing-to-teach-bench-and-bioinformatic-skills-to-the-next-generation-of-molecular-ecologists" class="anchor" href="#using-experimental-evolution-and-next-generation-sequencing-to-teach-bench-and-bioinformatic-skills-to-the-next-generation-of-molecular-ecologists" aria-hidden="true"><span class="octicon octicon-link"></span></a>Using experimental evolution and next-generation sequencing to teach bench and bioinformatic skills to the next generation of molecular ecologists</h1>
 
 <p>This is a module designed to simultaneously teach laboratory and bioinformatic skills. It contains several components:</p>
 
 <ul>
-<li>The student laboratory manual is hosted on Google Docs <a href="https://drive.google.com/open?id=1OKfVD6kcZ-fLz9UVEJcJ-TQOg9y4hFPKnGWAWqX1zh4&amp;authuser=0">here</a>.</li>
-<li>The instructor laboratory manual is <a href="https://docs.google.com/document/d/18eydwYfx_LYw_NtL3nmS11NxhePIwpTJ19eMZuchYRA/edit?usp=sharing">here</a>.</li>
-<li>The instructions for the bioinformatic analysis can be found on the <a href="https://github.com/mikheyev/t5-lab">main GitHub page</a>
+<li>The <a href="http://bit.ly/t5-lab-student">student laboratory manual</a> and <a href="http://bit.ly/t5-lab-instructor">instructor laboratory manual</a> hosted hosted on Google Docs.</li>
+<li>The <a href="t5-lab/blob/master/Bioinformatics.md">instructions for the bioinformatic analysis</a> can be found on the main GitHub page.</li>
+<li>The virtual machine and data for this teaching module will be available on DataDryad. They can be found now on the <a href="http://ecoevo.unit.oist.jp/class/t5-lab/">Ecology and Evolution Unit server</a>
 </li>
 </ul>
       </section>
