--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
 
 <ul>
 <li>The <a href="http://bit.ly/t5-lab-student">student laboratory manual</a> and <a href="http://bit.ly/t5-lab-instructor">instructor laboratory manual</a> hosted hosted on Google Docs.</li>
-<li>The <a href="t5-lab/blob/master/Bioinformatics.md">instructions for the bioinformatic analysis</a> can be found on the main GitHub page.</li>
-<li>The virtual machine and data for this teaching module will be available on DataDryad. They can be found now on the <a href="http://ecoevo.unit.oist.jp/class/t5-lab/">Ecology and Evolution Unit server</a>
+<li>The <a href="https://github.com/mikheyev/t5-lab/blob/master/Bioinformatics.md">instructions for the bioinformatic analysis</a> can be found on the main GitHub page.</li>
+<li>The VirtualBox virtual machine and data for this teaching module will be available on DataDryad. They can be found now on the <a href="http://ecoevo.unit.oist.jp/class/t5-lab/">Ecology and Evolution Unit server</a>
+
+<ul>
+<li>Note, the VM already contains all of the data, so if you are downloading the VM, you don't need to download the data.</li>
+</ul>
 </li>
 </ul>
       </section>
