Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
 <ul>
 <li>The <a href="http://bit.ly/t5-lab-student">student laboratory manual</a> and <a href="http://bit.ly/t5-lab-instructor">instructor laboratory manual</a> hosted hosted on Google Docs.</li>
 <li>The <a href="https://github.com/mikheyev/t5-lab/blob/master/Bioinformatics.md">instructions for the bioinformatic analysis</a> can be found on the main GitHub page.</li>
-<li>The VirtualBox virtual machine and data for this teaching module will be available on DataDryad. They can be found now on the <a href="http://ecoevo.unit.oist.jp/class/t5-lab/">Ecology and Evolution Unit server</a>
+<li>The VirtualBox virtual machine containing the data and software for this teaching module will be available on DataDryad. For the present, it can be dowloaded <a href="https://dl.dropboxusercontent.com/u/5275622/T5-lab.ova">here</a>. 
 
 <ul>
-<li>Note, the VM already contains all of the data, so if you are downloading the VM, you don't need to download the data.</li>
+<li>The data folders (reads, alignments and variant calles) are also <a href="https://dl.dropboxusercontent.com/u/5275622/t5-data.tar">separately</a>
+</li>
 </ul>
 </li>
 </ul>
